k8s/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
  labels:
    kubernetes.io/metadata.name: backend-ns
