k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-be
  namespace: backend-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-be
  template:
    metadata:
      labels:
        app: bookstore-be
    spec:
      containers:
      - name: bookstore-be
        image: moelhamzawy1/backend:v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
